[gd_scene load_steps=17 format=3 uid="uid://mvsi3yh8xcfv"]

[ext_resource type="PackedScene" uid="uid://dqnn0xey3mbow" path="res://scenes/SpaceShip.tscn" id="1_81tjy"]
[ext_resource type="Script" path="res://scenes/cut_scene.gd" id="1_t5xwh"]
[ext_resource type="PackedScene" uid="uid://d0d7n0xgmrro5" path="res://entites/player/dron_player.tscn" id="3_2yh1p"]
[ext_resource type="Texture2D" uid="uid://qvdw6c4rkrol" path="res://models/31506352382uefgy4dqaqnhjdxg1ux1kcojh3hbffkkggbyzjirljrevb7s6ic3gnis5m6ddbszy5lh5l011aumlgnycogp6sun8otukbpvtzv9-1199252123.png" id="3_imk67"]
[ext_resource type="Theme" uid="uid://n1pu8tpnp1u" path="res://entites/styles/base_style.tres" id="3_sgsal"]
[ext_resource type="Texture2D" uid="uid://dpn3n8kef0wfv" path="res://models/starmap_2020_2k.exr" id="3_uu5it"]
[ext_resource type="PackedScene" uid="uid://ctgsgjglpau0g" path="res://entites/mecha/repair_trigger.tscn" id="21_5powe"]
[ext_resource type="Script" path="res://src/gameplay/GameController.gd" id="21_sefmn"]

[sub_resource type="PlaneMesh" id="PlaneMesh_hfmk1"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2wiu"]
transparency = 2
alpha_scissor_threshold = 0.882
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_color = Color(1, 1, 0.933333, 1)
albedo_texture = ExtResource("3_imk67")
disable_receive_shadows = true

[sub_resource type="Animation" id="Animation_jw8ty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-300, 100, -202)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/CreditsLayer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera3D/CreditsLayer/TextEdit:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_p88yr"]
resource_name = "end"
length = 1200.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 28, 69, 1196.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-274, 100, -10), Vector3(-260, 91.945, -187), Vector3(-460, 70, -509), Vector3(-300, 100, -8000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/CreditsLayer/TextEdit:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3xm3"]
_data = {
"RESET": SubResource("Animation_jw8ty"),
"end": SubResource("Animation_p88yr")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_q2sxf"]
panorama = ExtResource("3_uu5it")
filter = false

[sub_resource type="Sky" id="Sky_xh54j"]
sky_material = SubResource("PanoramaSkyMaterial_q2sxf")
process_mode = 3

[sub_resource type="Environment" id="Environment_u4bxu"]
background_mode = 2
background_energy_multiplier = 0.05
sky = SubResource("Sky_xh54j")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.09
reflected_light_source = 1
sdfgi_read_sky_light = false
glow_enabled = true
fog_mode = 1
fog_light_color = Color(0, 0, 0, 1)
fog_density = 1.0
fog_depth_curve = 7.99998
fog_depth_end = 126.6
adjustment_brightness = 1.8

[node name="World" type="Node3D"]

[node name="CutScene" type="Node3D" parent="."]
script = ExtResource("1_t5xwh")

[node name="Camera3D" type="Camera3D" parent="CutScene"]
transform = Transform3D(-0.642788, 0, -0.766044, 0, 1, 0, 0.766044, 0, -0.642788, -300, 100, -202)
fov = 111.0
far = 6000.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CutScene/Camera3D"]
transform = Transform3D(0.0754115, 0.988487, -0.131173, 0.915852, -0.0166342, 0.401171, 0.394371, -0.150388, -0.906562, -12.8382, -57.6912, -455.604)
light_energy = 2.0
light_bake_mode = 1
shadow_enabled = true
directional_shadow_max_distance = 480.0
sky_mode = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="CutScene/Camera3D/DirectionalLight3D"]
transform = Transform3D(9.54594, 1.19209e-07, 9.54594, -9.54594, -9.53674e-07, 9.54594, 9.53674e-07, -13.5, -1.66893e-06, -0.00035518, 0.000193345, 3292.58)
mesh = SubResource("PlaneMesh_hfmk1")
surface_material_override/0 = SubResource("StandardMaterial3D_y2wiu")

[node name="CreditsLayer" type="CanvasLayer" parent="CutScene/Camera3D"]
layer = 2

[node name="TextEdit" type="RichTextLabel" parent="CutScene/Camera3D/CreditsLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -278.0
offset_top = -366.0
offset_right = -14.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme = ExtResource("3_sgsal")
bbcode_enabled = true
text = "[right]Bon Voyage!
Thank you for playing!

AltTabber - programming
noname - programming, 3d
baton - 3d

"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutScene"]
libraries = {
"": SubResource("AnimationLibrary_t3xm3")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u4bxu")

[node name="Ship" parent="." instance=ExtResource("1_81tjy")]

[node name="zBack" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -235)

[node name="zForward" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 269)

[node name="xLeft" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -156, 0, 0)

[node name="xRight" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 156, 0, 0)

[node name="yTop" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 71.99, 0)

[node name="yBottom" type="Marker3D" parent="Ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -38.5819, 0)

[node name="DronPlayer" parent="." instance=ExtResource("3_2yh1p")]
unique_name_in_owner = true
transform = Transform3D(0.995171, -0.0247733, -0.0949771, -0.0248858, -0.99969, 0, -0.0949476, 0.00236358, -0.99548, 7.22056, -24.844, -72.8295)
rotation_edit_mode = 1

[node name="GameController" type="Node" parent="." node_paths=PackedStringArray("_dronPlayer", "RepairTriggersFirstMission", "RepairTriggersSecondMission", "RepairTriggersThirdMission", "RepairTriggersFourthMission", "RepairTriggersFifthMission", "RepairTriggersSixthMission", "RepairTriggersSeventhMission", "RepairTriggersEighthMission")]
script = ExtResource("21_sefmn")
_dronPlayer = NodePath("../DronPlayer")
RepairTriggersFirstMission = [NodePath("../FirstMissionRepairTriggers/RepairTrigger"), NodePath("../FirstMissionRepairTriggers/RepairTrigger2")]
RepairTriggersSecondMission = [NodePath("../SecondMissionRepairTriggers/RepairTrigger2"), NodePath("../SecondMissionRepairTriggers/RepairTrigger3")]
RepairTriggersThirdMission = [NodePath("../ThirdMissionRepairTriggers/RepairTrigger2"), NodePath("../ThirdMissionRepairTriggers/RepairTrigger3"), NodePath("../ThirdMissionRepairTriggers/RepairTrigger4")]
RepairTriggersFourthMission = [NodePath("../FourthMissionRepairTriggers/RepairTrigger2"), NodePath("../FourthMissionRepairTriggers/RepairTrigger3"), NodePath("../FourthMissionRepairTriggers/RepairTrigger4")]
RepairTriggersFifthMission = [NodePath("../FifthMissionRepairTriggers/RepairTrigger2")]
RepairTriggersSixthMission = [NodePath("../SixthMissionRepairTriggers/RepairTrigger2")]
RepairTriggersSeventhMission = [NodePath("../SeventhMissionRepairTriggers/RepairTrigger2")]
RepairTriggersEighthMission = [NodePath("../EighthMissionRepairTriggers/RepairTrigger2")]

[node name="FirstMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -107.732, -20.1508, -139.338)

[node name="RepairTrigger" parent="FirstMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.52193, 8.50347, 0.155243)

[node name="RepairTrigger2" parent="FirstMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9778, 5.78098, 4.07291)

[node name="SecondMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.05905, -16.0486, -58.4221)

[node name="RepairTrigger2" parent="SecondMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, 0.38099, 0.924579, 0, -0.924579, 0.38099, -67.7763, 17.2874, 13.1405)

[node name="RepairTrigger3" parent="SecondMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, 0.217581, 0.976042, 0, -0.976042, 0.217581, -85.0376, 19.0079, 11.7081)

[node name="ThirdMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -83.4468, 27.5752, -184.98)

[node name="RepairTrigger2" parent="ThirdMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.925196, 0.379488, 0, -0.379488, -0.925196, 0, 0, 0, 1, -27.4709, -4.53392, 6.19337)

[node name="RepairTrigger3" parent="ThirdMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.968718, -0.248166, 0, 0.248166, -0.968718, 0, 0, 0, 1, 4.9036, 12.5525, 9.71114)

[node name="RepairTrigger4" parent="ThirdMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.721881, -0.692017, 0, 0.692017, -0.721881, 0, 0, 0, 1, -18.0548, -0.431942, 28.1942)

[node name="FourthMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.21456, -11.1233, 235.74)

[node name="RepairTrigger2" parent="FourthMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.267222, 0.963635, 0, -0.963635, -0.267222, 0, 0, 0, 1, -16.9949, 6.57411, 16.4209)

[node name="RepairTrigger3" parent="FourthMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.32904, 0.822741, 0.463497, -0.928499, -0.371335, 0, 0.172113, -0.430357, 0.886098, -11.2001, 6.40181, 22.0393)

[node name="RepairTrigger4" parent="FourthMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(0.213713, 0.976897, 0, -0.976897, 0.213713, 0, 0, 0, 1, -14.4222, 6.48924, 19.0749)

[node name="FifthMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.69152, 40.3897, 125.318)

[node name="RepairTrigger2" parent="FifthMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, -0.917727, -0.397212, 0, 0.397212, -0.917727, 0, 0, 0)

[node name="SixthMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2403, 46.1751, 75.9695)

[node name="RepairTrigger2" parent="SixthMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(1, 0, 0, 0, -0.986918, 0.161225, 0, -0.161225, -0.986918, 0, 0, 0)

[node name="SeventhMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.901, 72.2747, -90.8301)

[node name="RepairTrigger2" parent="SeventhMissionRepairTriggers" instance=ExtResource("21_5powe")]
transform = Transform3D(-0.878809, 0.477174, 0, -0.477174, -0.878809, 0, 0, 0, 1, 0, 0, 0)
withEffects = false

[node name="EighthMissionRepairTriggers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.94973, -24.6689, -78.7047)

[node name="RepairTrigger2" parent="EighthMissionRepairTriggers" instance=ExtResource("21_5powe")]
withEffects = false
